--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "mapbox-gl": "^2.9.1",
     "material-ui": "^0.20.2",
     "next": "^12.2.4",
-    "next-auth": "4.17.0",
+    "next-auth": "^4.22.1",
+    "node-fetch": "^3.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.32.2",
