--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^4.4.0",
     "@sendgrid/mail": "^7.7.0",
-    "@trpc/client": "^9.25.3",
-    "@trpc/next": "^9.25.3",
+    "@tanstack/react-query": "^4.29.19",
+    "@trpc/client": "^10.33.0",
+    "@trpc/next": "^10.33.0",
     "@trpc/react": "^9.25.3",
-    "@trpc/server": "^9.25.3",
+    "@trpc/react-query": "^10.33.0",
+    "@trpc/server": "^10.33.0",
     "@types/styled-components": "^5.1.26",
     "antd": "^5.1.6",
     "axios": "^0.27.2",
@@ -44,7 +46,8 @@
     "mapbox-gl": "^2.9.1",
     "material-ui": "^0.20.2",
     "next": "^12.2.4",
-    "next-auth": "4.17.0",
+    "next-auth": "^4.22.1",
+    "node-fetch": "^3.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.32.2",
@@ -54,7 +57,7 @@
     "react-toastify": "^9.0.4",
     "styled-components": "^5.3.6",
     "superjson": "^1.9.1",
-    "zod": "^3.17.3"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.2",
